release/agic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: onlineboutique-agic
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/backend-protocol: "http"
    appgw.ingress.kubernetes.io/health-probe-path: "/_healthz"
    appgw.ingress.kubernetes.io/health-probe-port: "8080"
    appgw.ingress.kubernetes.io/health-probe-status-codes: "200-399"
    appgw.ingress.kubernetes.io/request-timeout: "30"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /product
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /cart
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /setCurrency
        pathType: Exact
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /logout
        pathType: Exact
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /static
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /robots.txt
        pathType: Exact
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /_healthz
        pathType: Exact
        backend:
          service:
            name: frontend
            port:
              number: 80
